logs/subhd.py.log
Listing '.'...
Listing './bin'...
Compiling './bin/subhd.py'...
***   File "./bin/subhd.py", line 44
    print '%s) %s (%s)' % (i+1, item.get('title'), item.get('org'))
                      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/babelfish'...
Listing './lib/python3.5/site-packages/babelfish/converters'...
Listing './lib/python3.5/site-packages/babelfish/data'...
Listing './lib/python3.5/site-packages/babelfish-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.3.2.egg-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/guessit'...
Listing './lib/python3.5/site-packages/guessit/patterns'...
Listing './lib/python3.5/site-packages/guessit/plugins'...
Listing './lib/python3.5/site-packages/guessit/test'...
Listing './lib/python3.5/site-packages/guessit/transfo'...
Listing './lib/python3.5/site-packages/guessit-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyTongwen'...
Listing './lib/python3.5/site-packages/pysrt'...
Listing './lib/python3.5/site-packages/pysrt-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/rarfile-2.7.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/subhd.py-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/subhd_py'...
Compiling './lib/python3.5/site-packages/subhd_py/core.py'...
***   File "./lib/python3.5/site-packages/subhd_py/core.py", line 19
    self.info_re = re.compile(ur'\u683c\u5f0f\uff1a(\S+)\s' +
                                                          ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
